--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~2.0.1",
     "@angular/compiler": "~2.0.1",
-    "@angular/core": "~2.0.1",
+    "@angular/core": "~4.1.0",
     "@angular/forms": "~2.0.1",
     "@angular/http": "~2.0.1",
     "@angular/platform-browser": "~2.0.1",
@@ -29,6 +29,7 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.3",
     "typescript": "^2.0.3"
   }
 }
